// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Build displays the build time when running 1`] = `
<div
  className="build-bar build-running"
>
  <div
    className="build-status"
  >
    Running
  </div>
  <img
    alt="Joe Bloggs"
    className="build-author-avatar"
    src="https://example.com/image.png"
    title="Joe Bloggs"
  />
  <div
    className="build-details"
  >
    <div
      className="build-name text-ellipsis"
    >
      #
      123
       - 
      my-project
       / 
      master
    </div>
  </div>
  <div
    className="build-time"
  >
    <Ticker
      ticking={true}
      time={5000}
    />
  </div>
</div>
`;

exports[`Build displays unknown if the status is does not have a friendly name 1`] = `
<div
  className="build-bar build-something_else"
>
  <div
    className="build-status"
  >
    Unknown
  </div>
  <img
    alt="Joe Bloggs"
    className="build-author-avatar"
    src="https://example.com/image.png"
    title="Joe Bloggs"
  />
  <div
    className="build-details"
  >
    <div
      className="build-name text-ellipsis"
    >
      #
      123
       - 
      my-project
       / 
      master
    </div>
  </div>
  <div
    className="build-time"
  >
    <Ticker
      ticking={false}
      time={5000}
    />
  </div>
</div>
`;

exports[`Build hides the time if it is not in the props 1`] = `
<div
  className="build-bar build-success"
>
  <div
    className="build-status"
  >
    Success
  </div>
  <img
    alt="Joe Bloggs"
    className="build-author-avatar"
    src="https://example.com/image.png"
    title="Joe Bloggs"
  />
  <div
    className="build-details"
  >
    <div
      className="build-name text-ellipsis"
    >
      #
      123
       - 
      my-project
       / 
      master
    </div>
  </div>
  <div
    className="build-time"
  />
</div>
`;

exports[`Build renders correctly 1`] = `
<div
  className="build-bar build-success"
>
  <div
    className="build-status"
  >
    Success
  </div>
  <img
    alt="Joe Bloggs"
    className="build-author-avatar"
    src="https://example.com/image.png"
    title="Joe Bloggs"
  />
  <div
    className="build-details"
  >
    <div
      className="build-name text-ellipsis"
    >
      #
      123
       - 
      my-project
       / 
      master
    </div>
  </div>
  <div
    className="build-time"
  >
    <Ticker
      ticking={false}
      time={5000}
    />
  </div>
</div>
`;
